# Qt-projects

./: .gitignore  README.md  app.js  data.js  index.html  qml_cpp_registration.md  qml_manual_registration.md  style.css
projects/calculator/: CMakeLists.txt  main.cpp
projects/calculator/flux/: action.h  dispatcher.h  middleware.h
projects/calculator/qml/: BackspaceBtn.qml  CalculatorButton.qml  Config.qml  DigitButton.qml  Display.qml  Keyboard.qml  Main.qml  NumberBtn.qml  NumberPad.qml  OperatorBtn.qml  OperatorButton.qml
projects/calculator/src/: calculatoraction.h  calculatoractionprovider.cpp  calculatoractionprovider.h  calculatorengine.cpp  calculatorengine.h
projects/file_viewer/: CMakeLists.txt  main.cpp
projects/file_viewer/data/: data.csv  data.json  generate-csv.js  generate-json.js
projects/file_viewer/flux/: action.h  store.h
projects/file_viewer/qml/: ErrorDialog.qml  ItemTable.qml  Main.qml  OpenFileButton.qml  SearchBar.qml
projects/file_viewer/src/: DataType.h  ItemAction.h  actionprovider.cpp  actionprovider.h  fileparser.cpp  fileparser.h  itemdata.cpp  itemdata.h  itemmodel.cpp  itemmodel.h  itemstore.cpp  itemstore.h  itemviewmodel.cpp  itemviewmodel.h
projects/system_monitor/: CMakeLists.txt  main.cpp
projects/system_monitor/qml/components/: PrimaryBackground.qml
projects/system_monitor/qml/theme/: DarkPalette.qml  LightPalette.qml  Spacing.qml  Theme.qml  Typography.qml
projects/system_monitor/qml/ui/: BtnToggleTheme.qml  ControlBar.qml  Main.qml  MetricCard.qml  ResourceChart.qml
projects/system_monitor/src/: main.cpp
projects/system_monitor/src/controller/: monitorcontroller.cpp  monitorcontroller.h
projects/system_monitor/src/metrics/: ISystemMetricProvider.h  linuxmetricprovider.cpp  linuxmetricprovider.h  metric.h  metricproviderfactory.h  metricworker.cpp  metricworker.h  windowmetricprovider.cpp  windowmetricprovider.h
projects/to_do_app/: CMakeLists.txt
projects/to_do_app/data/: tasks.json
projects/to_do_app/qml/: FilterBar.qml  Main.qml  TaskDelegate.qml
projects/to_do_app/src/: Task.h  main.cpp  taskfilterproxy.cpp  taskfilterproxy.h  taskmodel.cpp  taskmodel.h  taskstorage.cpp  taskstorage.h
projects/to_do_app/src/flux/: action.h  dispatcher.cpp  dispatcher.h
projects/to_do_app/src/tasks/: FilterType.h  task.h  taskfilterproxy.cpp  taskfilterproxy.h  taskmodel.cpp  taskmodel.h  taskstore.cpp  taskstore.h
